--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@element-plus/icons-vue": "^2.1.0",
     "axios": "^1.4.0",
+    "cors": "^2.8.5",
     "element-plus": "^2.3.7",
     "pinia": "^2.1.4",
     "pinia-plugin-persistedstate": "^3.2.0",
